# sightglass

benchmarks/: all.suite
benchmarks/wasi-crypto/: Dockerfile  README.md  benchmark.wasm  wasi-crypto-aesgcm.wasm  wasi-crypto-ed25519-sign.wasm  wasi-crypto-ed25519-verify.wasm  wasi-crypto-hmac.wasm  wasi-crypto-rsa-sign.wasm  wasi-crypto-rsa-verify.wasm  wasi-crypto-sha256.wasm
benchmarks/wasi-crypto/rust-benchmark/: Cargo.toml
benchmarks/wasi-crypto/rust-benchmark/src/: wasi-crypto-aesgcm.rs  wasi-crypto-ed25519-sign.rs  wasi-crypto-ed25519-verify.rs  wasi-crypto-hmac.rs  wasi-crypto-rsa-sign.rs  wasi-crypto-rsa-verify.rs  wasi-crypto-sha256.rs
engines/wasmtime/: build.rs
