[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#wasi-crypto-guest = { git = "https://github.com/WebAssembly/wasi-crypto.git" }
wasi-crypto-guest = "0.1"
sightglass-api = "0.1"

[workspace]